--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,21 @@
-aniso8601==3.0.0
-behave==1.2.6
-certifi==2018.4.16
+aniso8601==6.0.0
+attrs==19.1.0
+certifi==2018.11.29
 chardet==3.0.4
-ciperror==1.0.30
-ciplog==1.1.1
-click==6.7
+Click==7.0
 flasgger==0.9.2
 Flask==1.0.2
 Flask-RESTful==0.3.7
 idna==2.8
-itsdangerous==0.24
+itsdangerous==1.1.0
 Jinja2==2.10
-jsonschema==2.6.0
-MarkupSafe==1.0
-mistune==0.8.3
-mock==2.0.0
-parse==1.8.2
-parse-type==0.4.2
-pbr==5.1.1
+jsonschema==3.0.1
+MarkupSafe==1.1.1
+mistune==0.8.4
+pyrsistent==0.14.11
 pytz==2018.9
 PyYAML==3.13
 requests==2.21.0
-six==1.11.0
+six==1.12.0
 urllib3==1.24.1
 Werkzeug==0.14.1
