Added new log format

--- a/conf/logging.conf
+++ b/conf/logging.conf
@@ -1,19 +1,19 @@
 version: 1
 formatters:
-  hiformat:
-    format: '%(asctime)s - %(name)s - %(levelname)s - %(message)s'
-  simple:
-    format: '%(asctime)s - %(name)s - %(levelname)s - %(message)s'
+  type1:
+    format: "{'datetime': %(asctime)s, 'name': %(name)s, 'level': %(levelname)s, 'message': %(message)s}"
+  type2:
+    format: "{'datetime': %(asctime)s, 'name': %(name)s, 'level': %(levelname)s, 'message': %(message)s}"
 handlers:
   console:
     class: logging.StreamHandler
     level: DEBUG
-    formatter: hiformat
+    formatter: type1
     stream: ext://sys.stdout
   file:
     class: logging.FileHandler
     level: DEBUG
-    formatter: simple
+    formatter: type2
     filename: /var/log/app/flask.log
 loggers:
   console:
