change  log folder

--- a/conf/logging.conf
+++ b/conf/logging.conf
@@ -14,7 +14,7 @@ handlers:
     class: logging.FileHandler
     level: DEBUG
     formatter: type2
-    filename: /var/log/app/flask.log
+    filename: /app/log/flask.log
 loggers:
   console:
     level: DEBUG
