--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: python
 python:
   - "3.7"
-# command to install dependencies
+ # command to install dependencies
 install:
   - pip install -r requirements.txt
+script:
+  - echo "TODO"
