--- a/conf/logging_dev.conf
+++ b/conf/logging_dev.conf
@@ -14,7 +14,7 @@ handlers:
     class: logging.FileHandler
     level: DEBUG
     formatter: type2
-    filename: /var/log/app
+    filename: flask.log
 loggers:
   console:
     level: DEBUG
