--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,28 @@
 aniso8601==6.0.0
 attrs==19.1.0
+behave==1.2.6
 certifi==2018.11.29
 chardet==3.0.4
 Click==7.0
 flasgger==0.9.2
 Flask==1.0.2
 Flask-RESTful==0.3.7
+httpretty==0.9.6
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
 jsonschema==3.0.1
 MarkupSafe==1.1.1
 mistune==0.8.4
+mock==3.0.5
+nose==1.3.7
+parse==1.12.1
+parse-type==0.5.2
+PyHamcrest==1.9.0
 pyrsistent==0.14.11
 pytz==2018.9
-PyYAML>=4.2b1
+PyYAML==5.1.2
 requests==2.21.0
+six==1.12.0
 urllib3==1.24.2
 Werkzeug==0.15.3
