fix dockerfile and travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,24 @@
+sudo: required
+
 language: python
-python:
-  - "3.7"
- # command to install dependencies
+
+services:
+  - docker
+
+before_install:
+  - pip install -U pip
+  - pip install awscli
+
 install:
-  - pip install -r requirements.txt
+  - echo "install nothing!"
+
 script:
-  - behave
+  - echo "no tests!" # put your normal testing scripts here
+
+after_success:
+  - docker --version  # document the version travis is using
+  - export PATH=$PATH:$HOME/.local/bin # put aws in the path
+  - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin $ECR_ACCOUNT.dkr.ecr.us-east-1.amazonaws.com
+  - docker build -t homer-01 .
+  - docker tag homer-01:latest $ECR_ACCOUNT.dkr.ecr.us-east-1.amazonaws.com/homer-01:latest
+  - docker push $ECR_ACCOUNT.dkr.ecr.us-east-1.amazonaws.com/homer-01:latest
