add dynamic  project name

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ language: python
 services:
   - docker
 
+env:
+  global:
+    PROJECT_NAME=`echo $TRAVIS_REPO_SLUG | cut -d'/' -f2'`
+
 before_install:
   - pip install -U pip
   - pip install awscli
@@ -19,6 +23,6 @@ after_success:
   - docker --version  # document the version travis is using
   - export PATH=$PATH:$HOME/.local/bin # put aws in the path
   - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin $ECR_ACCOUNT.dkr.ecr.us-east-1.amazonaws.com
-  - docker build -t homer-01 .
-  - docker tag homer-01:latest $ECR_ACCOUNT.dkr.ecr.us-east-1.amazonaws.com/homer-01:latest
-  - docker push $ECR_ACCOUNT.dkr.ecr.us-east-1.amazonaws.com/homer-01:latest
+  - docker build -t $PROJECT_NAME .
+  - docker tag $PROJECT_NAME:latest $ECR_ACCOUNT.dkr.ecr.us-east-1.amazonaws.com/$PROJECT_NAME:latest
+  - docker push $ECR_ACCOUNT.dkr.ecr.us-east-1.amazonaws.com/$PROJECT_NAME:latest
