--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
 
 env:
   global:
-    - PROJECT_NAME=`echo $TRAVIS_REPO_SLUG | cut -d'/' -f2'`
+    - PROJECT_NAME=`echo $TRAVIS_REPO_SLUG | cut -d'/' -f2`
 
 before_install:
   - pip install -U pip
